# model_manager

./: .gitignore  Cargo.toml
src/: lib.rs
src/dynamic/application/: dynamic_data.rs  dynamic_value.rs  dynamic_value_converter.rs  mod.rs
src/dynamic/infrastructure/: dynamic_value_impl.rs  json_to_dynamic_value_converter.rs  mod.rs
src/model/application/: mod.rs  model_manager.rs
src/model/infrastructure/: delete_message.rs  get_all_message.rs  get_message.rs  insert_message.rs  mod.rs  model_actor.rs  model_manager_impl.rs  update_message.rs
tests/: dynamic_data_tests.rs  model_manager_tests.rs  tests.rs
tests/dynamic/: dynamic_value_converter_tests.rs  dynamic_value_tests.rs  mod.rs
tests/model/: mod.rs
