[package]
name = "model_manager"
version = "1.0.0"
edition = "2021"

[lib]
name = "model_manager"
path = "src/lib.rs"
# generate to library compatible with C
crate-type = ["rlib", "cdylib"] # Configuración opcional para crear librerías compartidas

[dependencies]
serde_json = "1.0.140"
actix = { version = "0.13.5", features = ["default"] }
uuid = { version = "1.11.0", features = ["v4"] }
tokio = { version = "1.44.1", features = ["full"] }
actix-rt = "2.10.0"